fix pages-menu spacing

--- a/public/global.css
+++ b/public/global.css
@@ -55,3 +55,6 @@ code {
   border-radius: 4px;
 }
 
+pages-menu{
+  margin: 40px 0;
+}
